[package]
name = "game3d"
version = "0.1.0"
description = "A Tauri App"
authors = ["Codetoil"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/Codetoil/Game3D.git"
default-run = "game3d"
edition = "2021"
rust-version = "1.78.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.22", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "game3d_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
